// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ensure no name clashes 1`] = `
"{
  const get_time = nativeStorage.builtins.get(\\"get_time\\");
  const display = nativeStorage.builtins.get(\\"display\\");
  const raw_display = nativeStorage.builtins.get(\\"raw_display\\");
  const stringify = nativeStorage.builtins.get(\\"stringify\\");
  const error = nativeStorage.builtins.get(\\"error\\");
  const prompt = nativeStorage.builtins.get(\\"prompt\\");
  const is_number = nativeStorage.builtins.get(\\"is_number\\");
  const is_string = nativeStorage.builtins.get(\\"is_string\\");
  const is_function = nativeStorage.builtins.get(\\"is_function\\");
  const is_boolean = nativeStorage.builtins.get(\\"is_boolean\\");
  const is_undefined = nativeStorage.builtins.get(\\"is_undefined\\");
  const parse_int = nativeStorage.builtins.get(\\"parse_int\\");
  const char_at = nativeStorage.builtins.get(\\"char_at\\");
  const arity = nativeStorage.builtins.get(\\"arity\\");
  const undefined = nativeStorage.builtins.get(\\"undefined\\");
  const NaN = nativeStorage.builtins.get(\\"NaN\\");
  const Infinity = nativeStorage.builtins.get(\\"Infinity\\");
  const math_abs = nativeStorage.builtins.get(\\"math_abs\\");
  const math_acos = nativeStorage.builtins.get(\\"math_acos\\");
  const math_acosh = nativeStorage.builtins.get(\\"math_acosh\\");
  const math_asin = nativeStorage.builtins.get(\\"math_asin\\");
  const math_asinh = nativeStorage.builtins.get(\\"math_asinh\\");
  const math_atan = nativeStorage.builtins.get(\\"math_atan\\");
  const math_atanh = nativeStorage.builtins.get(\\"math_atanh\\");
  const math_atan2 = nativeStorage.builtins.get(\\"math_atan2\\");
  const math_ceil = nativeStorage.builtins.get(\\"math_ceil\\");
  const math_cbrt = nativeStorage.builtins.get(\\"math_cbrt\\");
  const math_expm1 = nativeStorage.builtins.get(\\"math_expm1\\");
  const math_clz32 = nativeStorage.builtins.get(\\"math_clz32\\");
  const math_cos = nativeStorage.builtins.get(\\"math_cos\\");
  const math_cosh = nativeStorage.builtins.get(\\"math_cosh\\");
  const math_exp = nativeStorage.builtins.get(\\"math_exp\\");
  const math_floor = nativeStorage.builtins.get(\\"math_floor\\");
  const math_fround = nativeStorage.builtins.get(\\"math_fround\\");
  const math_hypot = nativeStorage.builtins.get(\\"math_hypot\\");
  const math_imul = nativeStorage.builtins.get(\\"math_imul\\");
  const math_log = nativeStorage.builtins.get(\\"math_log\\");
  const math_log1p = nativeStorage.builtins.get(\\"math_log1p\\");
  const math_log2 = nativeStorage.builtins.get(\\"math_log2\\");
  const math_log10 = nativeStorage.builtins.get(\\"math_log10\\");
  const math_max = nativeStorage.builtins.get(\\"math_max\\");
  const math_min = nativeStorage.builtins.get(\\"math_min\\");
  const math_pow = nativeStorage.builtins.get(\\"math_pow\\");
  const math_random = nativeStorage.builtins.get(\\"math_random\\");
  const math_round = nativeStorage.builtins.get(\\"math_round\\");
  const math_sign = nativeStorage.builtins.get(\\"math_sign\\");
  const math_sin = nativeStorage.builtins.get(\\"math_sin\\");
  const math_sinh = nativeStorage.builtins.get(\\"math_sinh\\");
  const math_sqrt = nativeStorage.builtins.get(\\"math_sqrt\\");
  const math_tan = nativeStorage.builtins.get(\\"math_tan\\");
  const math_tanh = nativeStorage.builtins.get(\\"math_tanh\\");
  const math_trunc = nativeStorage.builtins.get(\\"math_trunc\\");
  const math_E = nativeStorage.builtins.get(\\"math_E\\");
  const math_LN10 = nativeStorage.builtins.get(\\"math_LN10\\");
  const math_LN2 = nativeStorage.builtins.get(\\"math_LN2\\");
  const math_LOG10E = nativeStorage.builtins.get(\\"math_LOG10E\\");
  const math_LOG2E = nativeStorage.builtins.get(\\"math_LOG2E\\");
  const math_PI = nativeStorage.builtins.get(\\"math_PI\\");
  const math_SQRT1_2 = nativeStorage.builtins.get(\\"math_SQRT1_2\\");
  const math_SQRT2 = nativeStorage.builtins.get(\\"math_SQRT2\\");
  const pair = nativeStorage.builtins.get(\\"pair\\");
  const is_pair = nativeStorage.builtins.get(\\"is_pair\\");
  const head = nativeStorage.builtins.get(\\"head\\");
  const tail = nativeStorage.builtins.get(\\"tail\\");
  const is_null = nativeStorage.builtins.get(\\"is_null\\");
  const list = nativeStorage.builtins.get(\\"list\\");
  const draw_data = nativeStorage.builtins.get(\\"draw_data\\");
  const display_list = nativeStorage.builtins.get(\\"display_list\\");
  const is_list = nativeStorage.builtins.get(\\"is_list\\");
  const set_head = nativeStorage.builtins.get(\\"set_head\\");
  const set_tail = nativeStorage.builtins.get(\\"set_tail\\");
  const array_length = nativeStorage.builtins.get(\\"array_length\\");
  const is_array = nativeStorage.builtins.get(\\"is_array\\");
  const stream_tail = nativeStorage.builtins.get(\\"stream_tail\\");
  const stream = nativeStorage.builtins.get(\\"stream\\");
  const parse = nativeStorage.builtins.get(\\"parse\\");
  const tokenize = nativeStorage.builtins.get(\\"tokenize\\");
  const apply_in_underlying_javascript = nativeStorage.builtins.get(\\"apply_in_underlying_javascript\\");
  {
    const native0 = nativeStorage;
    const callIfFuncAndRightArgs0 = native0.operators.get(\\"callIfFuncAndRightArgs\\");
    const boolOrErr0 = native0.operators.get(\\"boolOrErr\\");
    const wrap90 = native0.operators.get(\\"wrap\\");
    const wrapSourceModule = native0.operators.get(\\"wrapSourceModule\\");
    const unaryOp = native0.operators.get(\\"unaryOp\\");
    const binaryOp = native0.operators.get(\\"binaryOp\\");
    const throwIfTimeout = native0.operators.get(\\"throwIfTimeout\\");
    const setProp = native0.operators.get(\\"setProp\\");
    const getProp = native0.operators.get(\\"getProp\\");
    const builtins = native0.operators.get(\\"builtins\\");
    native0.evaller = program => eval(program);
    undefined;
    const boolOrErr = 1;
    setProp(boolOrErr, 123, 1, 2, 0, null);
    const f = wrap90((callIfFuncAndRightArgs, wrap0, wrap1, wrap2, wrap3, wrap4, wrap5, wrap6, wrap7, wrap8, wrap9) => {
      let wrap = 2;
      wrap0;
      wrap1;
      wrap2;
      wrap3;
      wrap4;
      wrap5;
      wrap6;
      wrap7;
      wrap8;
      wrap9;
    }, \\"function f(callIfFuncAndRightArgs, wrap0, wrap1, wrap2, wrap3, wrap4, wrap5, wrap6, wrap7, wrap8, wrap9) {\\\\n  let wrap = 2;\\\\n  wrap0;\\\\n  wrap1;\\\\n  wrap2;\\\\n  wrap3;\\\\n  wrap4;\\\\n  wrap5;\\\\n  wrap6;\\\\n  wrap7;\\\\n  wrap8;\\\\n  wrap9;\\\\n}\\", false, native0);
    const native = 123;
  }
}
"
`;

exports[`builtins do get prepended 1`] = `
Object {
  "code": "\\"ensure_builtins\\";",
  "transpiled": "{
  const get_time = nativeStorage.builtins.get(\\"get_time\\");
  const display = nativeStorage.builtins.get(\\"display\\");
  const raw_display = nativeStorage.builtins.get(\\"raw_display\\");
  const stringify = nativeStorage.builtins.get(\\"stringify\\");
  const error = nativeStorage.builtins.get(\\"error\\");
  const prompt = nativeStorage.builtins.get(\\"prompt\\");
  const is_number = nativeStorage.builtins.get(\\"is_number\\");
  const is_string = nativeStorage.builtins.get(\\"is_string\\");
  const is_function = nativeStorage.builtins.get(\\"is_function\\");
  const is_boolean = nativeStorage.builtins.get(\\"is_boolean\\");
  const is_undefined = nativeStorage.builtins.get(\\"is_undefined\\");
  const parse_int = nativeStorage.builtins.get(\\"parse_int\\");
  const char_at = nativeStorage.builtins.get(\\"char_at\\");
  const arity = nativeStorage.builtins.get(\\"arity\\");
  const undefined = nativeStorage.builtins.get(\\"undefined\\");
  const NaN = nativeStorage.builtins.get(\\"NaN\\");
  const Infinity = nativeStorage.builtins.get(\\"Infinity\\");
  const math_abs = nativeStorage.builtins.get(\\"math_abs\\");
  const math_acos = nativeStorage.builtins.get(\\"math_acos\\");
  const math_acosh = nativeStorage.builtins.get(\\"math_acosh\\");
  const math_asin = nativeStorage.builtins.get(\\"math_asin\\");
  const math_asinh = nativeStorage.builtins.get(\\"math_asinh\\");
  const math_atan = nativeStorage.builtins.get(\\"math_atan\\");
  const math_atanh = nativeStorage.builtins.get(\\"math_atanh\\");
  const math_atan2 = nativeStorage.builtins.get(\\"math_atan2\\");
  const math_ceil = nativeStorage.builtins.get(\\"math_ceil\\");
  const math_cbrt = nativeStorage.builtins.get(\\"math_cbrt\\");
  const math_expm1 = nativeStorage.builtins.get(\\"math_expm1\\");
  const math_clz32 = nativeStorage.builtins.get(\\"math_clz32\\");
  const math_cos = nativeStorage.builtins.get(\\"math_cos\\");
  const math_cosh = nativeStorage.builtins.get(\\"math_cosh\\");
  const math_exp = nativeStorage.builtins.get(\\"math_exp\\");
  const math_floor = nativeStorage.builtins.get(\\"math_floor\\");
  const math_fround = nativeStorage.builtins.get(\\"math_fround\\");
  const math_hypot = nativeStorage.builtins.get(\\"math_hypot\\");
  const math_imul = nativeStorage.builtins.get(\\"math_imul\\");
  const math_log = nativeStorage.builtins.get(\\"math_log\\");
  const math_log1p = nativeStorage.builtins.get(\\"math_log1p\\");
  const math_log2 = nativeStorage.builtins.get(\\"math_log2\\");
  const math_log10 = nativeStorage.builtins.get(\\"math_log10\\");
  const math_max = nativeStorage.builtins.get(\\"math_max\\");
  const math_min = nativeStorage.builtins.get(\\"math_min\\");
  const math_pow = nativeStorage.builtins.get(\\"math_pow\\");
  const math_random = nativeStorage.builtins.get(\\"math_random\\");
  const math_round = nativeStorage.builtins.get(\\"math_round\\");
  const math_sign = nativeStorage.builtins.get(\\"math_sign\\");
  const math_sin = nativeStorage.builtins.get(\\"math_sin\\");
  const math_sinh = nativeStorage.builtins.get(\\"math_sinh\\");
  const math_sqrt = nativeStorage.builtins.get(\\"math_sqrt\\");
  const math_tan = nativeStorage.builtins.get(\\"math_tan\\");
  const math_tanh = nativeStorage.builtins.get(\\"math_tanh\\");
  const math_trunc = nativeStorage.builtins.get(\\"math_trunc\\");
  const math_E = nativeStorage.builtins.get(\\"math_E\\");
  const math_LN10 = nativeStorage.builtins.get(\\"math_LN10\\");
  const math_LN2 = nativeStorage.builtins.get(\\"math_LN2\\");
  const math_LOG10E = nativeStorage.builtins.get(\\"math_LOG10E\\");
  const math_LOG2E = nativeStorage.builtins.get(\\"math_LOG2E\\");
  const math_PI = nativeStorage.builtins.get(\\"math_PI\\");
  const math_SQRT1_2 = nativeStorage.builtins.get(\\"math_SQRT1_2\\");
  const math_SQRT2 = nativeStorage.builtins.get(\\"math_SQRT2\\");
  const pair = nativeStorage.builtins.get(\\"pair\\");
  const is_pair = nativeStorage.builtins.get(\\"is_pair\\");
  const head = nativeStorage.builtins.get(\\"head\\");
  const tail = nativeStorage.builtins.get(\\"tail\\");
  const is_null = nativeStorage.builtins.get(\\"is_null\\");
  const list = nativeStorage.builtins.get(\\"list\\");
  const draw_data = nativeStorage.builtins.get(\\"draw_data\\");
  const display_list = nativeStorage.builtins.get(\\"display_list\\");
  const is_list = nativeStorage.builtins.get(\\"is_list\\");
  const set_head = nativeStorage.builtins.get(\\"set_head\\");
  const set_tail = nativeStorage.builtins.get(\\"set_tail\\");
  const array_length = nativeStorage.builtins.get(\\"array_length\\");
  const is_array = nativeStorage.builtins.get(\\"is_array\\");
  const stream_tail = nativeStorage.builtins.get(\\"stream_tail\\");
  const stream = nativeStorage.builtins.get(\\"stream\\");
  const parse = nativeStorage.builtins.get(\\"parse\\");
  const tokenize = nativeStorage.builtins.get(\\"tokenize\\");
  const apply_in_underlying_javascript = nativeStorage.builtins.get(\\"apply_in_underlying_javascript\\");
  {
    const native = nativeStorage;
    const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
    const boolOrErr = native.operators.get(\\"boolOrErr\\");
    const wrap = native.operators.get(\\"wrap\\");
    const wrapSourceModule = native.operators.get(\\"wrapSourceModule\\");
    const unaryOp = native.operators.get(\\"unaryOp\\");
    const binaryOp = native.operators.get(\\"binaryOp\\");
    const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
    const setProp = native.operators.get(\\"setProp\\");
    const getProp = native.operators.get(\\"getProp\\");
    const builtins = native.operators.get(\\"builtins\\");
    native.evaller = program => eval(program);
    undefined;
    \\"ensure_builtins\\";
  }
}
",
}
`;
